--- a/MyCalendar/WPCalendar/Themes/Generic.xaml
+++ b/MyCalendar/WPCalendar/Themes/Generic.xaml
@@ -12,8 +12,9 @@
     
     <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
     <converters:ColorConverter x:Name="ColorConverter"/>
-   
-    
+    <converters:EventTypeToVisibilityConverter x:Name="EventTypeToVisibilityConverter"/>
+    <converters:EventTypeToCheckedConverter x:Name="EventTypeToCheckedConverter"/>
+
     <!--Custom colours-->
    
     <SolidColorBrush x:Name="PhoneForegroundBrush2" Color="DarkGray"/>
@@ -407,8 +408,13 @@
                                 <ColumnDefinition/>
                                 <ColumnDefinition/>
                             </Grid.ColumnDefinitions>
-                            <Button x:Name="CancelButton" Height="Auto" Width="Auto" Margin="0,10,0,0" 
-                                Style="{StaticResource ButtonStyle}" Grid.Row="0" Grid.Column="0" >
+                            <Button x:Name="CancelButton" 
+                                    Height="Auto" Width="Auto" 
+                                    Margin="0,10,0,0" 
+                                    Style="{StaticResource ButtonStyle}" 
+                                    Grid.Row="0" Grid.Column="0" 
+                                    Background="{Binding RelativeSource={RelativeSource TemplatedParent}, 
+                                          Path=EventColor, Mode=TwoWay}">
                                 <Button.Content>
                                     <Grid Height="Auto" Width="Auto">
                                         <Grid.ColumnDefinitions>
@@ -425,8 +431,12 @@
                                 </Button.Content>
                             </Button>
                             <Button x:Name="SaveButton"
-                                Height="Auto" Width="Auto" Margin="0,10,0,0" 
-                                Style="{StaticResource ButtonStyle}" Grid.Row="0" Grid.Column="1" >
+                                Height="Auto" Width="Auto" 
+                                Margin="0,10,0,0" 
+                                Style="{StaticResource ButtonStyle}" 
+                                Grid.Row="0" Grid.Column="1" 
+                                Background="{Binding RelativeSource={RelativeSource TemplatedParent}, 
+                                          Path=EventColor, Mode=TwoWay}">
                                 <Button.Content>
                                     <Grid Height="Auto" Width="Auto">
                                         <Grid.ColumnDefinitions>
@@ -471,12 +481,18 @@
                                     x:Name="startDatePicker"
                                     Foreground="Black" 
                                     BorderBrush="DarkGray"
+                                     Value="{Binding RelativeSource={RelativeSource TemplatedParent}, 
+                                          Path=EventStart, Mode=TwoWay}"
                                     BorderThickness="0,0,0,2"/>
                                 <toolkit:TimePicker  
                                      x:Name="startTimePicker"
                                      Foreground="Black" 
                                      BorderBrush="DarkGray"
-                                     BorderThickness="0,0,0,2"/>
+                                     BorderThickness="0,0,0,2"
+                                     Value="{Binding RelativeSource={RelativeSource TemplatedParent}, 
+                                          Path=EventStart, Mode=TwoWay}"
+                                     Visibility="{Binding RelativeSource={RelativeSource TemplatedParent}, 
+                                          Path=EventType, Converter={StaticResource EventTypeToVisibilityConverter}}"/>
                             </StackPanel>
                             <TextBlock Grid.Row="5" Grid.ColumnSpan="2"  
                                        Margin="10,0,0,0"
@@ -489,17 +505,25 @@
                                      x:Name="endDatePicker"
                                      Foreground="Black" 
                                      BorderBrush="DarkGray"
-                                     BorderThickness="0,0,0,2"/>
+                                     BorderThickness="0,0,0,2"
+                                     Value="{Binding RelativeSource={RelativeSource TemplatedParent}, 
+                                          Path=EventEnd, Mode=TwoWay}"/>
                                 <toolkit:TimePicker
                                      x:Name="endTimePicker"
                                      Foreground="Black" 
                                      BorderBrush="DarkGray"
-                                     BorderThickness="0,0,0,2"/>
+                                     BorderThickness="0,0,0,2"
+                                     Value="{Binding RelativeSource={RelativeSource TemplatedParent}, 
+                                          Path=EventEnd, Mode=TwoWay}"
+                                     Visibility="{Binding RelativeSource={RelativeSource TemplatedParent}, 
+                                          Path=EventType, Converter={StaticResource EventTypeToVisibilityConverter}}"/>
                             </StackPanel>
                             <CheckBox 
                                 x:Name="CBAllDayEvents"
                                 Grid.Row="7" Grid.ColumnSpan="2"
                                 Content="ALL DAY" 
+                                IsChecked="{Binding RelativeSource={RelativeSource TemplatedParent}, 
+                                          Path=EventType, Converter={StaticResource EventTypeToCheckedConverter},Mode=TwoWay}"                               
                                 Foreground="DarkGray"  
                                 BorderBrush="DarkGray"/>
                             <Grid x:Name="EventColoursGrid"
@@ -523,6 +547,8 @@
                                         HorizontalAlignment="Left"
                                         BorderBrush="DarkGray"
                                         BorderThickness="1" 
+                                    Background="{Binding RelativeSource={RelativeSource TemplatedParent}, 
+                                          Path=EventColor, Mode=TwoWay}"
                                         Margin="10">
                                  
                                     <Image Source="Images/Dark/check.png"
@@ -608,7 +634,8 @@
                                             StrokeThickness="0.7" />
                                 <Button x:Name="BtnBackToCalendar"
                                     Margin="10"
-                                    Background="LightGray"
+                                    Background="{Binding RelativeSource={RelativeSource TemplatedParent}, 
+                                          Path=EventColor, Mode=TwoWay}"
                                     HorizontalAlignment="Left">
                                     <Button.Content>
                                         <Border>
@@ -620,7 +647,8 @@
                                 </Button>
                                 <Button x:Name="BtnEditEvent"
                                      Margin="10,10,120,10"
-                                    Background="LightGray"
+                                    Background="{Binding RelativeSource={RelativeSource TemplatedParent}, 
+                                    Path=EventColor, Mode=TwoWay}"
                                     HorizontalAlignment="Right">
                                     <Button.Content>
                                         <Image Source="Images/Dark/edit.png" 
@@ -630,7 +658,8 @@
                                 </Button>
                                 <Button x:Name="BtnDeleteEvent" 
                                     Margin="10"
-                                    Background="LightGray"
+                                    Background="{Binding RelativeSource={RelativeSource TemplatedParent}, 
+                                    Path=EventColor, Mode=TwoWay}"
                                     HorizontalAlignment="Right">
                                     <Button.Content>
                                         <Image Source="Images/Dark/delete.png" 
@@ -646,7 +675,9 @@
                                             Height="0.7"
                                             StrokeThickness="0.7" />
                             </Grid>
-                            <Border x:Name="BorderTitle" Grid.Row="1" Background="Transparent">
+                            <Border x:Name="BorderTitle" Grid.Row="1" 
+                                     Background="{Binding RelativeSource={RelativeSource TemplatedParent}, 
+                                     Path=EventColor, Mode=TwoWay}">
                                 <TextBlock x:Name="TBEventTitle" 
                                                    Margin="20"
                                                    Text="{TemplateBinding EventTitle}"
