swipe activated on item detail
Templated Calendar Item Detail
OnSwipe: navigate through item detail

--- a/MyCalendar/WPCalendar/Themes/CustomColors.xaml
+++ b/MyCalendar/WPCalendar/Themes/CustomColors.xaml
@@ -13,4 +13,5 @@
     <SolidColorBrush x:Name="LightGray" Color="LightGray"/>
     <SolidColorBrush x:Name="Thistle" Color="Thistle"/>
     <SolidColorBrush x:Name="White" Color="White"/>
+    <SolidColorBrush x:Name="DarkGray" Color="DarkGray"/>
 </ResourceDictionary>
