--- a/MyCalendar/MyCalendar/MainPage.xaml
+++ b/MyCalendar/MyCalendar/MainPage.xaml
@@ -13,7 +13,7 @@
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait" Orientation="Portrait"
-    shell:SystemTray.IsVisible="True">
+    shell:SystemTray.IsVisible="False">
 
     
     <!--LayoutRoot is the root grid where all page content is placed-->
@@ -29,6 +29,7 @@
                 x:Name="Cal"
                 Grid.Row="0"
                 EnableGestures="True"
+                Margin="0,10,0,0"
                  />            
          
         </Grid>
