--- a/MyCalendar/WPCalendar/Themes/Generic.xaml
+++ b/MyCalendar/WPCalendar/Themes/Generic.xaml
@@ -136,7 +136,7 @@
                                    Foreground="{StaticResource DarkGray}"
                                    Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
 
-                        <StackPanel x:Name="DetailsHeaderStackPanel" Visibility="Collapsed" Margin="9,-7,0,0" Grid.Column="1" Grid.ColumnSpan="2">
+                        <StackPanel x:Name="DetailsHeaderStackPanel" Visibility="Collapsed" Margin="9,10,0,0" Grid.Column="1" Grid.ColumnSpan="2">
                             <TextBlock Text="{TemplateBinding DayOfTheWeek}"
                                        Foreground="{StaticResource DarkGray}" />
                             <TextBlock  
